# mfem-pcms-example

./: .gitignore  CMakeLists.txt  README.md  config.b.sh  config.sh  couplerun.sh  cylFuel  cylFuel.geo  cylfuelcell3d-v2.msh  cylfuelcell3d-v4.msh  cylinderGmsh.geo  fluxSolver.cpp  loads.b.sh  loads.sh  mfem-pcms-mfem_coupling.cpp  mfem_field_adapter.h  mfem_pcms_coupling.cpp  test_mfem_adapter-main.cpp  test_mfem_adapter-thefinal.cpp  test_mfem_adapter.cpp  test_mfem_coupling.cpp  test_mfem_coupling_bash_commands.sh  test_support.cpp  test_support.h  thermalSolver.cpp
.Mesh.backup/: .gitignore
Mesh/: cylfuelcell3d.geo
doc/: .gitignore  bibliography.bib  main.tex
mesh/: cylfuelcell3d.geo  testmesh.msh
run/: run.sh
run/ParaView/fluxSol/Cycle000000/: data.pvtu
